leverage font-display to ensure text remains visible #247

--- a/themes/gauge_theme/static/css/font.css
+++ b/themes/gauge_theme/static/css/font.css
@@ -1,50 +1,59 @@
 @font-face {
     font-family: 'URWGeometric-Medium';
+    font-display: swap;
     src: url('../font/urw-geometric/354267_0_0.eot');
     src: url('../font/urw-geometric/354267_0_0.eot?#iefix') format('embedded-opentype'), url('../font/urw-geometric/354267_0_0.woff2') format('woff2'), url('../font/urw-geometric/354267_0_0.woff') format('woff'), url('../font/urw-geometric/354267_0_0.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'URWGeometric-SemiBold';
+  font-display: swap;
   src: url('../font/urw-geometric/354267_1_0.eot');
   src: url('../font/urw-geometric/354267_1_0.eot?#iefix') format('embedded-opentype'), url('../font/urw-geometric/354267_1_0.woff2') format('woff2'), url('../font/urw-geometric/354267_1_0.woff') format('woff'), url('../font/urw-geometric/354267_1_0.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'URWGeometric-ExtraBold';
+    font-display: swap;
     src: url('../font/urw-geometric/354267_2_0.eot');
     src: url('../font/urw-geometric/354267_2_0.eot?#iefix') format('embedded-opentype'), url('../font/urw-geometric/354267_2_0.woff2') format('woff2'), url('../font/urw-geometric/354267_2_0.woff') format('woff'), url('../font/urw-geometric/354267_2_0.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'URWGeometric-Heavy';
+    font-display: swap;
     src: url('../font/urw-geometric/354267_3_0.eot');
     src: url('../font/urw-geometric/354267_3_0.eot?#iefix') format('embedded-opentype'), url('../font/urw-geometric/354267_3_0.woff2') format('woff2'), url('../font/urw-geometric/354267_3_0.woff') format('woff'), url('../font/urw-geometric/354267_3_0.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'URWGeometric-Regular';
+    font-display: swap;
     src: url('../font/urw-geometric/URWGeometric-Regular.eot?#iefix') format('embedded-opentype'), url('../font/urw-geometric/URWGeometric-Regular.otf') format('opentype'), url('../font/urw-geometric/URWGeometric-Regular.woff') format('woff'), url('../font/urw-geometric/URWGeometric-Regular.ttf') format('truetype'), url('../font/urw-geometric/RWGeometric-Regular.svg#URWGeometric-Regular') format('svg');
 }
 
 
 @font-face {
     font-family: 'URWGeometric-Light';
+    font-display: swap;
     src: url('../font/urw-geometric/URWGeometric-Light.eot?#iefix') format('embedded-opentype'), url('../font/urw-geometric/URWGeometric-Light.otf') format('opentype'), url('../font/urw-geometric/URWGeometric-Light.woff') format('woff'), url('../font/urw-geometric/URWGeometric-Light.ttf') format('truetype'), url('../font/urw-geometric/URWGeometric-Light.svg#URWGeometric-Light') format('svg');
 }
 
 @font-face {
     font-family: 'URWGeometric-ExtraLight';
+    font-display: swap;
     src: url('../font/urw-geometric/URWGeometric-ExtraLight.eot?#iefix') format('embedded-opentype'), url('../font/urw-geometric/URWGeometric-ExtraLight.otf') format('opentype'), url('../font/urw-geometric/URWGeometric-ExtraLight.woff') format('woff'), url('../font/urw-geometric/URWGeometric-ExtraLight.ttf') format('truetype'), url('../font/urw-geometric/URWGeometric-ExtraLight.svg#URWGeometric-ExtraLight') format('svg');
 }
 
 @font-face {
     font-family: 'OpenSans-Bold';
+    font-display: swap;
     src: url('../font/open-sans/OpenSans-Bold.ttf');
  }
 
  @font-face {
     font-family: 'OpenSans-Regular';
+    font-display: swap;
     src: url('../font/open-sans/OpenSans-Regular.ttf');
  }
 
@@ -55,12 +64,12 @@
 
  @font-face {
     font-family: 'OpenSans-extrabolditalic';
+    font-display: swap;
     src: url('../font/open-sans/OpenSans-ExtraBoldItalic.ttf');
  }
-
-
-
+ 
  @font-face {
     font-family: 'SourceCodePro-Medium';
+    font-display: swap;
     src: url('../font/source-code-pro/SourceCodePro-Medium.eot?#iefix') format('embedded-opentype'), url('../font/source-code-pro/SourceCodePro-Medium.otf') format('opentype'), url('../font/source-code-pro/SourceCodePro-Medium.ttf.woff') format('woff'), url('../font/source-code-pro/SourceCodePro-Medium.ttf') format('truetype');
  }
